# sdk

./: .checkpatch.conf  .clang-tidy  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  CODEOWNERS  Kconfig  README.md  README.rst  VERSION  platform-env.sh  west.yml
.githooks/: post-checkout  post-commit  post-merge  pre-commit  pre-push
apps/shell/: CMakeLists.txt  prj.conf  sample.robot  sample.yaml
apps/shell/boards/: custom_board.repl  custom_board.resc  native_posix.overlay
apps/shell/src/: main.c
cmake/: CMakeLists.txt  Kconfig  clang-tidy.cmake  simulation.cmake  version.cmake  version.h.in
doc/: CMakeLists.txt  conf.py  consulting.rst  index-tex.rst  index.rst  versions.json  zephyr.doxyfile.in
doc/_doxygen/: doxygen-awesome-darkmode-toggle.js  doxygen-awesome.css  mainpage.md
doc/_extensions/interbreathe/: __init__.py
doc/_extensions/zephyr/: application.py  doxyrunner.py  dtcompatible-role.py  html_redirects.py  kconfig-role.py  link-roles.py  warnings_filter.py
doc/_scripts/: gen_devicetree_rest.py  gen_helpers.py  gen_kconfig_rest.py  merge_search_indexes.py  redirects.py
doc/_static/html/: index.html
doc/_static/latex/: title.tex
doc/_templates/: zversions.html
doc/_theme/sphinx_swe_theme/: __init__.py  footer.html  layout.html  search.html  theme.conf  versions.html
doc/_theme/sphinx_swe_theme/static/css/: swe.css
doc/_theme/sphinx_swe_theme/static/js/: bootstrap.bundle.min.js  swe.js  theme.js
doc/_utils/: utils.py
doc/boards/: index.rst
doc/boards/arm/custom_board/: hardware.rst  overview.rst  references.rst  testing.rst
doc/develop/: conf.py  index.rst
doc/drivers/: index.rst
doc/drivers/example/: example_driver.rst  example_sensor.rst
doc/drivers/example/example_driver/: api-reference.rst  description.rst  main-features.rst  usage.rst  what-is-this.rst
doc/drivers/example/example_sensor/: api-reference.rst  description.rst  main-features.rst  usage.rst  what-is-this.rst
doc/drivers/gpio/: index.rst  mcp23s17.rst
doc/drivers/gpio/mcp23s17/: api-reference.rst  description.rst  main-features.rst  usage.rst  what-is-this.rst
doc/getting-started/: implementation.rst  index.rst  offer.rst  pitfalls.rst  prerequisites.rst  what-is-this.rst  what-we-have-done.rst  what-we-will-do.rst
doc/guides/: getting-started.rst  index.rst
doc/guides/getting-started/: implementation.rst  offer.rst  pitfalls.rst  prerequisites.rst  what-is-this.rst  what-we-have-done.rst  what-we-will-do.rst
doc/introduction/: community.rst  downloading.rst  further-reading.rst  index.rst  sdk-overview.drawio  what-is-this.rst  why-we-need-it.rst  windows.rst
doc/lib/: example.rst  index.rst
doc/lib/example/: api-reference.rst  description.rst  index.rst  main-features.rst  usage.rst  what-is-this.rst
doc/lib/renode/: api-reference.rst  description.rst  index.rst  main-features.rst  usage.rst  what-is-this.rst
doc/mcuboot/: conf.py  index.rst
doc/renode-docs/: conf.py
doc/samples/: index.rst
doc/sdk/: conf.py  index-tex.rst  index.rst  links.txt  sdk.doxyfile.in  shortcuts.txt
doc/sdk/control/: index.rst
doc/sdk/drivers/example/example_driver/: main-features.rst  usage.rst  what-is-this.rst
doc/sdk/drivers/example/example_sensor/: main-features.rst  usage.rst  what-is-this.rst
doc/sdk/drivers/gpio/mcp23s17/: usage.rst
doc/sdk/img/: sdk.drawio
doc/sdk/introduction/: downloading.rst  further-reading.rst  why-we-need-it.rst
doc/sdk/lib/example/: main-features.rst  usage.rst
doc/sdk/release-notes/: 0.33.0.rst  index.rst
doc/sdk/simulation/: index.rst
doc/sdk/workflow/: flashing.rst  index.rst  offer.rst  what-is-this.rst
doc/simulation/: what-is-this.rst
doc/simulation/img/: cosimulation.drawio
doc/testbench/: index.rst
doc/testing/: conf.py  index.rst
doc/userspace/: conf.py  index.rst
doc/workflow/: debugging.rst  docker-build.rst  flashing.rst  index.rst  new-project.rst  offer.rst  pitfalls.rst  simulating.rst  testing.rst  what-is-this.rst
doc/zephyr/: conf.py
drivers/: CMakeLists.txt  Kconfig
integrity/: variables.py
lib/: CMakeLists.txt  Kconfig
modules/: CMakeLists.txt  Kconfig
renode/: SharedLibraryPeripheral.cs  SocketPeripheral.cs  plugins.resc
samples/: index.rst
samples/design-patterns/virtual-api/: CMakeLists.txt  sample.yaml
samples/design-patterns/virtual-api/src/: main.c  serial.c  serial.h  serial_impl.c  serial_impl.h  serial_ops.h
samples/hdl/verilog/: CMakeLists.txt  formal.sby.in  prj.conf  sample.yaml  yosys.cfg.in
samples/hdl/verilog/plc/: config.sby
samples/hdl/verilog/src/: main.cpp  plc.v
samples/lib/control/basic/: CMakeLists.txt  lqi-design.m  prj.conf  sample.yaml
samples/lib/control/basic/boards/: custom_board.repl  custom_board.resc
samples/lib/control/basic/doc/: index.rst
samples/lib/control/basic/peripheral/: main.cpp
samples/lib/control/basic/plugin/: SocketPeripheral.cs
samples/lib/control/basic/src/: main.c
samples/renode/interrupts/: CMakeLists.txt  prj.conf  sample.yaml
samples/renode/interrupts/boards/: custom_board.repl  custom_board.resc
samples/renode/interrupts/peripheral/: main.cpp  virtual_device.h
samples/renode/interrupts/src/: main.c
samples/renode/nativesimulation/: CMakeLists.txt  prj.conf
samples/renode/nativesimulation/boards/: custom_board.repl  custom_board.resc
samples/renode/nativesimulation/doc/: index.rst
samples/renode/nativesimulation/plugin/: SharedLibraryPeripheral.cs  peripheral.c
samples/renode/nativesimulation/src/: main.c
scripts/: apply-zephyr-patches  build  build-doc  check  coverage  dockerize  fix  gen-tags  init  robot  (+7 more)
tests/drivers/example/example_sensor/: CMakeLists.txt  prj.conf  testcase.yaml
tests/drivers/example/example_sensor/boards/: custom_board.overlay
tests/drivers/example/example_sensor/src/: unit.c
tests/lib/example/example/: CMakeLists.txt  prj.conf  testcase.yaml
tests/lib/example/example/src/: integration.c  unit.c
tests/lib/renode/renode/: CMakeLists.txt  prj.conf  testcase.yaml
tests/lib/renode/renode/src/: integration.c  unit.c
(+238 files in other folders)
